tests/health/gold/sdk/tests__lsp__this_super_definition_test.toit.gold
tests/lsp/this_super_definition_test.toit:42:5: error: Can't access 'this' in static method
    this.member  // It's an error, but we might as well link to the class.
    ^~~~
tests/lsp/this_super_definition_test.toit:61:10: error: Couldn't find matching constructor in superclass 'SomeClass'
    super.named2
         ^
tests/lsp/this_super_definition_test.toit:90:5: error: Argument mismatch for 'bar'
Too few arguments provided
    super
    ^~~~~
<sdk>/core/numbers.toit:593:12: warning: Deprecated 'int.parse'
    return parse data 0 data.size --radix=radix --on_error=: throw it
           ^~~~~
<sdk>/core/numbers.toit:597:12: warning: Deprecated 'int.parse'
    return parse data from to --radix=radix --on_error=: throw it
           ^~~~~
<sdk>/core/numbers.toit:606:12: warning: Deprecated 'int.parse'
    return parse data 0 data.size --radix=radix --on_error=on_error
           ^~~~~
<sdk>/core/string.toit:327:14: warning: Deprecated 'int.parse'
        : int.parse format start (pos - 1) --radix=10 --on_error=: throw it
             ^
